--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "lodash": "^4.17.10"
   }
 }
